<?xml version="1.0"?>
<package format="2">
  <name>vfh3d</name>
  <version>0.0.0</version>
  <description>The vfh3d package</description>

  <maintainer email="saifullah3396@gmail.com">Saifullah</maintainer>
  <license>BSD</license>
  <author email="saifullah3396@gmail.com">Saifullah</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>octomap_msgs</build_export_depend>
  <build_export_depend>octomap_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>octomap_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>